Edit openApi document
